# true-lens

./: .dockerignore  .env.example  .flake8  .gitignore  Justfile  README.md  conftest.py  docker-compose.localdb.yml  docker-compose.yml  manage.py  package.json  pyproject.toml  railway.toml
deploy/: deploy.sh
docker/: Dockerfile
docker/nginx/: default.conf
docs/: apps-stack-deploy.md  dating-url-validation.md
output/gui-screenshots/: README.md
requirements/: 00-overview.md  01-product-scope.md  02-user-flows.md  03-security-model.md  04-data-model.md  05-api-contract.md  06-distributed-architecture.md  07-deployment-and-ops.md
scripts/: bootstrap.sh
src/app/: celery.py  env.py  gunicorn.conf.py  settings.py  settings_test.py  urls.py
src/templates/: admin_dashboard.html  base.html  billing.html  dashboard.html  landing.html  profile.html  vote_history.html
testcases/: README.md  scenario-01-captcha-and-search.md  scenario-02-register-and-vote.md  scenario-03-create-new-profile.md  scenario-04-admin-dashboard.md
tests/: conftest.py  test_age_filter.py  test_auth_pages.py  test_captcha_csrf.py  test_contact_relay.py  test_create_profile.py  test_replication_failover.py  test_search_flow.py  test_security_gate.py  test_seed_dev_data_command.py  test_urls.py  test_vote_rules.py
tests/accounts/: test_api.py  test_forms_and_validators.py  test_models.py  test_services_adapter_signal_email.py  test_views.py
tests/admin/: test_admin_pages.py
tests/candidates/: test_api_actions.py  test_api_search.py  test_commands.py  test_models.py  test_services_actions.py  test_services_lookup.py
tests/common/: test_context_and_env.py  test_views.py
tests/credits/: test_api.py  test_models.py  test_services.py
tests/integrations/: test_google_places.py
tests/moderation/: test_api.py  test_models.py
(+89 files in other folders)
