[project]
name = "true-lens"
version = "0.1.2"
description = "TrueLens — clarity through verified profile lookup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=6.0,<6.1",
  "psycopg2-binary>=2.9.9",
  "dj-database-url>=2.2.0",
  "django-allauth>=65.16.0",
  "argon2-cffi>=23.1.0",
  "django-ratelimit>=4.1.0",
  "stripe>=12.2.0",
  "resend>=2.13.0",
  "sentry-sdk[django]>=2.20.0",
  "weasyprint>=65.1",
  "django-pwa>=2.0.1",
  "django-modeltranslation>=0.19.15",
  "gunicorn>=23.0.0",
  "whitenoise>=6.9.0",
  "python-dateutil>=2.9.0.post0",
  "django-htmx>=1.23.0",
  "phonenumbers>=9.0.5",
  "Unidecode>=1.3.8",
  "rapidfuzz>=3.13.0",
  "captcha>=0.7.1",
  "requests>=2.32.3",
  "pyjwt>=2.9.0",
  "cryptography>=45.0.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "flake8>=7.2.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5",
  "pytest-django>=4.11.1",
  "ruff>=0.11.7",
  "django-stubs[compatible-mypy]>=5.1.3",
  "types-requests>=2.32.0.20250328",
  "playwright>=1.60.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/app/settings_test.py" = ["F403", "F405"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
django_find_project = false
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["apps.*", "app.*"]
ignore_errors = true
